@@ -104,6 +104,17 @@ button.buttonDeleteAsset .icon {
 
 
 
+/* ------------------------
+	Context menu task
+   ------------------------ */
+#contextmenu .taskContextMenu.task-add-asset {
+	background-image:url(../img/icons.png);
+	background-repeat:no-repeat;
+	background-position:6px -27px;
+}
+
+
+
 /* --------------------------
  	Task tab
    --------------------------*/
